--- a/css/index.scss
+++ b/css/index.scss
@@ -1,27 +1,25 @@
-@import 'fonts.css';
-
-$secondary-color: #F27935;
+$accent-color: #f27935;
 
 $primary-font-color: #000;
 $secondary-font-color: #fff;
 
 $default-font-size: 16px;
 
-@mixin font($weight, $size: 1rem, $clr: #000) {
-  font: {
-    family: 'SF Pro Display'; // $family
-    weight: $weight;
-    size: $size;
-  }
-
-  color: $clr;
-}
-
 @mixin flex($jcc: start, $ai: normal, $fld: row) {
   display: flex;
   justify-content: $jcc;
   align-items: $ai;
   flex-direction: $fld;
+}
+
+@mixin font($weight, $size: 1rem, $color: #000) {
+  font: {
+    family: 'SF Pro Display';
+    weight: $weight;
+    size: $size;
+  }
+
+  color: $color;
 }
 
 %centering-flex-container {
@@ -32,12 +30,16 @@ $default-font-size: 16px;
 
 html {
   box-sizing: border-box;
+  font-size: $default-font-size;
+
+  // overflow-x: hidden;
 }
 
 body {
   box-sizing: inherit;
-  font-size: $default-font-size;
   overflow-x: hidden;
+  // display: flex;
+  // flex-direction: column;
 }
 
 a {
@@ -46,7 +48,7 @@ a {
 }
 
 .container {
-  min-width: 1110px;
+  width: 1110px;
   margin: 0 auto;
 }
 
@@ -93,7 +95,7 @@ a {
   }
 
   .header__menu-item-link:hover {
-    color: $secondary-color;
+    color: $accent-color;
   }
 
   .header__call {
@@ -103,7 +105,7 @@ a {
 
   .header__call-text {
     margin-right: 12px;
-    @include font(600, 18px, $secondary-color);
+    @include font(600, 18px, $accent-color);
   }
 
   .header__call-link {
@@ -126,7 +128,7 @@ a {
   }
 
   .header__title-start {
-    color: $secondary-color;
+    color: $accent-color;
   }
 
   .header__lower {
@@ -155,14 +157,249 @@ a {
     bottom: 86px;
     right: 60px;
     max-width: 380px;
-    min-height: 84px; 
+    min-height: 84px;
     @include font(400, 15px, #fff);
     line-height: 140%;
   }
 
 }
 
-.section__about {
-  height: 500px;
-  
+.about {
+  //   height: 500px;
+  //   // position: static;
+  //   // top: 0;
+  //   // left: 0;
+
+  .about__upper {
+    padding-top: 125px;
+    border-bottom: 1px solid #000;
+  }
+
+  .about__upper-title {
+    @include font(700, 25px);
+  }
+
+  .about__central {
+    // display: flex;
+    // justify-content: center;
+
+    @include flex(center);
+  }
+
+  //   .about__central-container {
+  //     display: flex;
+  //     padding-bottom: 105px;
+
+  //     position: relative;
+  //   }
+
+  .about__central-text {
+    width: 396px;
+    height: 105px;
+    margin-top: 470px;
+    @include font(400, 15px);
+    line-height: 140%;
+
+    // margin-right: 200px;
+
+    margin-left: 180px;
+
+  }
+
+  .about__central-text:hover {
+    color: #f27935;
+    cursor: pointer;
+  }
+
+  .about__central-img {
+    position: relative;
+    left: 150px;
+
+    width: 875px;
+    height: 525px;
+
+    background-image: url(../images/exterior-1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    margin-top: 155px;
+
+
+  }
+
+  .about__lower {
+    @include flex(center);
+
+    position: relative;
+
+    padding-bottom: 200px;
+  }
+
+  .about__lower-title-container {
+    padding-top: 155px;
+  }
+
+  .about__lower-title {
+    text-align: right;
+    @include font(700, 25px);
+  }
+
+  .about__lower-container {
+    display: flex;
+
+    // position: relative;
+  }
+
+  .about__lower-img {
+    width: 555px;
+    height: 522px;
+
+    background-image: url(../images/exterior-2.jpg);
+    background-position-y: -150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .about__lower-text-container {
+    border-top: 1px solid #000;
+    padding-left: 150px;
+    padding-top: 340px;
+
+    position: absolute;
+    right: 0;
+
+    width: 42.1%;
+
+    // position: relative;
+    // left: 200px;
+
+  }
+
+  .about__lower-text {
+    width: 405px;
+    min-height: 63px;
+    text-align: right;
+    @include font(400, 15px);
+    line-height: 140%;
+  }
+
+  .about__lower-text:hover {
+    color: #f27935;
+    cursor: pointer;
+  }
+}
+
+.services {
+  display: flex;
+  background-color: #f9f9f9;
+  padding-bottom: 165px;
+
+  .services__left {
+    width: 50%;
+    padding-top: 170px;
+  }
+
+  .services__title {
+    max-width: 530px;
+    border-bottom: 1px solid #000;
+    text-align: right;
+    @include font(700, 25px);
+    line-height: 22px;
+  }
+
+  .services__right {
+    width: 50%;
+  }
+
+  .services__list {
+    padding-top: 170px; // ? мб заменить на 1 значение
+  }
+
+  .services__list-item {
+    max-width: 555px;
+  }
+
+  .services__list-item-upper {
+    border-bottom: 1px solid #000;
+    @include flex(space-between, center);
+    padding-bottom: 7px;
+
+  }
+
+  .services__list-item-title {
+    @include font(600, 15px);
+  }
+
+  .services__list-item-btn {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    outline: none;
+    border: 1px solid #000;
+    background-color: transparent;
+
+    @extend %centering-flex-container;
+
+  }
+
+  .services__list-item-btn:hover {
+    background-color: #f27935;
+    border: none;
+
+    transition: .2s all ease;
+  }
+
+  .services__list-item-btn:hover:after {
+    content: url(/images/white-up-arrow.png);
+    position: absolute;
+    left: 9px;
+    top: 2px;
+  }
+
+
+  .services__list-item-btn-down-arrow {
+    background-image: url(/images/black-down-arrow.svg);
+    // background-size: contain;
+    background-position: center center;
+
+    width: 7px;
+    height: 7px;
+  }
+
+  // .services__list-item-btn-down-arrow:hover {
+  //   background-image: none;
+  //   // transition: .2s all ease;
+  // }
+
+  .services__list-item-lower {
+
+    @include flex(space-between);
+    padding: 40px 0 40px;
+  }
+
+  .services__list-item-link {
+    margin-top: auto;
+    @include font(400, 15px);
+    color: #f27935;
+    transform: translateX(0px);
+    transition: .3s all ease;
+  }
+
+  .services__list-item-link:after {
+    content: url(/images/orange-arrow.png);
+    padding-left: 8px;
+  }
+
+  .services__list-item-link:hover {
+    transform: translateX(4px);
+    transition: .3s all ease;
+  }
+
+  .services__list-item-text {
+    width: 380px;
+    text-align: right;
+    @include font(400, 15px);
+    line-height: 140%;
+  }
 }
