--- a/index/css/index.css
+++ b/index/css/index.css
@@ -1,15 +1,3 @@
-.services .services__list-item-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -81,7 +69,7 @@ a {
 }
 
 .header .header__menu-item-link {
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 600;
   font-size: 14px;
   color: #fff;
@@ -100,14 +88,14 @@ a {
 
 .header .header__call-text {
   margin-right: 12px;
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 600;
   font-size: 18px;
   color: #f27935;
 }
 
 .header .header__call-link {
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 600;
   font-size: 18px;
   color: #fff;
@@ -125,7 +113,7 @@ a {
 }
 
 .header .header__title {
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 600;
   font-size: 90px;
   color: #fff;
@@ -168,7 +156,7 @@ a {
   right: 60px;
   max-width: 380px;
   min-height: 84px;
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 400;
   font-size: 15px;
   color: #fff;
@@ -181,7 +169,7 @@ a {
 }
 
 .about .about__upper-title {
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 700;
   font-size: 25px;
   color: #000;
@@ -207,7 +195,7 @@ a {
   width: 396px;
   height: 105px;
   margin-top: 470px;
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 400;
   font-size: 15px;
   color: #000;
@@ -255,7 +243,7 @@ a {
 
 .about .about__lower-title {
   text-align: right;
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 700;
   font-size: 25px;
   color: #000;
@@ -289,7 +277,7 @@ a {
   width: 405px;
   min-height: 63px;
   text-align: right;
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 400;
   font-size: 15px;
   color: #000;
@@ -301,156 +289,12 @@ a {
   cursor: pointer;
 }
 
-.services {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #f9f9f9;
-  padding-bottom: 165px;
-}
-
-.services .services__left {
-  width: 50%;
-  padding-top: 170px;
-}
-
-.services .services__title {
-  max-width: 530px;
-  border-bottom: 1px solid #000;
-  text-align: right;
-  font-family: 'SF Pro Display';
-  font-weight: 700;
-  font-size: 25px;
-  color: #000;
-  line-height: 22px;
-}
-
-.services .services__right {
-  width: 50%;
-}
-
-.services .services__list {
-  padding-top: 170px;
-}
-
-.services .services__list-item {
-  max-width: 555px;
-}
-
-.services .services__list-item-upper {
-  border-bottom: 1px solid #000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding-bottom: 7px;
-}
-
-.services .services__list-item-title {
-  font-family: 'SF Pro Display';
-  font-weight: 600;
-  font-size: 15px;
-  color: #000;
-}
-
-.services .services__list-item-btn {
-  position: relative;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  outline: none;
-  border: 1px solid #000;
-  background-color: transparent;
-}
-
-.services .services__list-item-btn:hover {
-  background-color: #f27935;
-  border: none;
-  -webkit-transition: .2s all ease;
-  transition: .2s all ease;
-}
-
-.services .services__list-item-btn:hover:after {
-  content: url(/images/white-up-arrow.png);
-  position: absolute;
-  left: 9px;
-  top: 2px;
-}
-
-.services .services__list-item-btn-down-arrow {
-  background-image: url(/images/black-down-arrow.svg);
-  background-position: center center;
-  width: 7px;
-  height: 7px;
-}
-
-.services .services__list-item-lower {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: normal;
-      -ms-flex-align: normal;
-          align-items: normal;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 40px 0 40px;
-}
-
-.services .services__list-item-link {
-  margin-top: auto;
-  font-family: 'SF Pro Display';
-  font-weight: 400;
-  font-size: 15px;
-  color: #000;
-  color: #f27935;
-  -webkit-transform: translateX(0px);
-          transform: translateX(0px);
-  -webkit-transition: .3s all ease;
-  transition: .3s all ease;
-}
-
-.services .services__list-item-link:after {
-  content: url(/images/orange-arrow.png);
-  padding-left: 8px;
-}
-
-.services .services__list-item-link:hover {
-  -webkit-transform: translateX(4px);
-          transform: translateX(4px);
-  -webkit-transition: .3s all ease;
-  transition: .3s all ease;
-}
-
-.services .services__list-item-text {
-  width: 380px;
-  text-align: right;
-  font-family: 'SF Pro Display';
-  font-weight: 400;
-  font-size: 15px;
-  color: #000;
-  line-height: 140%;
-}
-
 .projects .projects__upper {
   padding-top: 220px;
 }
 
 .projects .projects__title {
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 600;
   font-size: 57px;
   color: #000;
@@ -491,7 +335,7 @@ a {
 }
 
 .projects .swiper-slide__title {
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 700;
   font-size: 25px;
   color: #000;
@@ -505,7 +349,7 @@ a {
 }
 
 .projects .swiper-slide__category {
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 600;
   font-size: 13px;
   color: #f27935;
@@ -546,10 +390,22 @@ a {
 .projects .swiper-slide__text {
   width: 330px;
   text-align: center;
-  font-family: 'SF Pro Display';
+  font-family: "SF Pro Display";
   font-weight: 400;
   font-size: 15px;
   color: #000;
   line-height: 21px;
+}
+
+.clients .clients__title {
+  max-width: 738px;
+  text-align: right;
+  font-family: SF Pro Display;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 20px;
+  letter-spacing: 0.03em;
+  border-bottom: 1px solid #000;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=index.css.map */
