--- a/blocks/services/_services.scss
+++ b/blocks/services/_services.scss
@@ -3,9 +3,18 @@
   background-color: #f9f9f9;
   padding-bottom: 165px;
 
+  padding-top: 170px;
+
+  @media screen and (max-width: 1550px) {
+    & {
+      padding-bottom: 82.5px;
+      padding-top: 85px;
+    }
+  }
+
   .services__left {
     width: 50%;
-    padding-top: 170px;
+    // padding-top: 170px;
   }
 
   .services__title {
@@ -16,12 +25,18 @@
     line-height: 22px;
   }
 
+  @media screen and (max-width: 1550px) {
+    .services__title {
+      max-width: 410px;
+    }
+  }
+
   .services__right {
     width: 50%;
   }
 
   .services__list {
-    padding-top: 170px; // ? мб заменить на 1 значение
+    // padding-top: 170px; // ? мб заменить на 1 значение
   }
 
   .services__list-item {
